<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <ImageView
            android:id="@+id/imgUploadPreview"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:background="#F0F3F6"
            android:contentDescription="@null"
            android:scaleType="centerCrop"
            android:src="@drawable/artwork_1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnPickUploadImage"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginTop="8dp"
            android:text="@string/upload_pick_image"
            android:textAllCaps="false" />

        <EditText
            android:id="@+id/edtUploadTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/upload_field_title"
            android:importantForAutofill="no"
            android:inputType="textCapSentences"
            android:maxLines="1" />

        <EditText
            android:id="@+id/edtUploadArtist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/upload_field_artist"
            android:importantForAutofill="no"
            android:inputType="textCapWords"
            android:maxLines="1" />

        <EditText
            android:id="@+id/edtUploadPriceVnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/upload_field_price_vnd"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLines="1" />

        <EditText
            android:id="@+id/edtUploadStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/upload_field_style"
            android:importantForAutofill="no"
            android:inputType="textCapWords"
            android:maxLines="1" />

        <EditText
            android:id="@+id/edtUploadMaterial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/upload_field_material"
            android:importantForAutofill="no"
            android:inputType="textCapWords"
            android:maxLines="1" />

        <EditText
            android:id="@+id/edtUploadSize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/upload_field_size"
            android:importantForAutofill="no"
            android:inputType="textCapWords"
            android:maxLines="1" />

        <EditText
            android:id="@+id/edtUploadLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/upload_field_location"
            android:importantForAutofill="no"
            android:inputType="textCapWords"
            android:maxLines="1" />

        <EditText
            android:id="@+id/edtUploadDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/upload_field_description"
            android:importantForAutofill="no"
            android:inputType="textMultiLine|textCapSentences"
            android:minLines="3" />

        <EditText
            android:id="@+id/edtUploadTags"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/upload_field_tags"
            android:importantForAutofill="no"
            android:inputType="textCapWords|textMultiLine"
            android:minLines="2" />

    </LinearLayout>
</ScrollView>


